# llm-training-pipeline

./: .gitignore  CLAUDE.md  LICENSE  PRODUCTION_TRAINING_GUIDE.md  README.md  REFACTOR_PLAN.md  START_PRODUCTION_TRAINING.sh  pipe_cleaning_logs.txt  pyproject.toml  requirements.txt
TASKS/: 2026-02-23-capability-expansion-research.md  2026-02-23-multi-agent-coordination-research.md  2026-02-25-transformer-engine-sm120-moe-prs.md  2026-02-26-tui-notebook-checkpoint-flow-analysis.md  tui-training-technical-writeup.md
TASKS/DONE/: 2026-02-26-disk-space-management.md
TOOLS/: investigate_base_model_keys.py  test_merged_model_local.py
configs/: core_agent.yaml  core_agent_go.yaml  core_agent_python.yaml  core_agent_typescript.yaml  data_sources.yaml  data_sources_go.yaml  data_sources_rust.yaml  data_sources_typescript.yaml  dpo.yaml  dpo_1b.yaml  go_eval.yaml  gpt_oss_20b.py  grpo.yaml  grpo_go.yaml  grpo_python.yaml  grpo_tui.yaml  grpo_typescript.yaml  ipo.yaml  lang_rust.yaml  lora_finetune.yaml  merge_adapter.yaml  model_7b.py  model_configs.py  model_tiny_demo.py  pretrain.yaml  pretrain_1b.yaml  promotion_gates.yaml  python_eval.yaml  rust_eval.yaml  sft.yaml  sft_1b.yaml  typescript_eval.yaml
configs/sota/: go_eval_benchmarks.yaml  go_taxonomy.yaml  governance.yaml  provenance_schema.yaml  python_eval_benchmarks.yaml  python_taxonomy.yaml  rust_eval_benchmarks.yaml  rust_taxonomy.yaml  typescript_eval_benchmarks.yaml  typescript_taxonomy.yaml
configs/tokenizer/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
docs/: DATA_FORMATS.md  SOTA_Master_Plan.md  V2_OPTIMIZATION_PLAN.md
docs/plans/: 2026-02-23-master-training-roadmap.md  2026-02-26-tui-training-script-design.md  2026-02-26-tui-training-script-plan.md
notebooks/: colab_jupyter_kernel.ipynb  generate_mutations_colab.ipynb  generate_mutations_local.ipynb  test_split_lora_moe.ipynb  train_1b_reasoning_model.ipynb  train_1b_reasoning_model_jupyter.ipynb  train_gpt_oss_coding_tui.ipynb  train_gpt_oss_rust_agent.ipynb  train_gpt_oss_rust_agent_v2.ipynb  train_gpt_oss_rust_agent_v3.ipynb  train_gpt_oss_rust_agent_v4.ipynb  training_pipeline.ipynb
reference/: RESEARCH-gpt-oss-repository.md
scripts/: 01_download_data.py  02_clean_deduplicate.py  02_clean_deduplicate_optimized.py  02_gpu_clean_deduplicate.py  03_tokenize_and_pack.py  04_init_model.py  05_pretrain.py  06_prepare_reasoning_data.py  06_prepare_sft_data.py  07_sft.py  08_prepare_dpo_data.py  09_dpo.py  10_lora_finetune.py  11_evaluate.py  12_check_gates.py  13_train_lang_adapter.py  14_train_core_agent.py  15_generate_trajectories.py  16_generate_mutations.py  17_ipo_preference.py  18_grpo_rl.py  19_merge_adapter.py  20_prepare_strandset.py  bench_gpt_oss.py  bench_gpt_oss_vllm.py  benchmark_dashboard.py  checkpoint_manager.sh  demo_generate_data.py  demo_init_model.py  demo_pretrain.py  demo_tokenize.py  eval_coding_agent.py  eval_rust_agent.py  full_model_pretrain.py  generate_long_sequences.py  generate_report.py  generate_tui_grpo_tasks.py  gpu_dedup.py  gpu_keepalive.py  gpu_text_utils.py  (+22 more)
scripts/dataset_formatters/: __init__.py  function_calling.py  general.py  harmony.py  math.py  reasoning.py
scripts/dedup/: __init__.py  common.py  core.py  cpu_fallback.py  gpu_impl.py  lsh.py  minhash.py
scripts/pipeline_lib/: __init__.py  (+22 more)
tests/: __init__.py  conftest.py  test_configs.py  test_data_pipeline.py  test_disk_manager.py  test_evaluator_dispatch.py  test_gpu_utils.py  test_pack_sft.py  test_tui_evaluators.py
(+12 files in other folders)
