[project]
name = "llm-training-pipeline"
version = "0.1.0"
description = "Production LLM training pipeline for 7B models on A100/H100 GPUs"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "trl>=0.7",
    "accelerate>=0.25",
    "datasets>=2.14",
    "peft>=0.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "tensorboard>=2.14",
    "tqdm>=4.66",
    "flash-attn>=2.3",
    # Data cleaning dependencies
    "pandas>=2.0",
    "datasketch>=1.6",
    "ftfy>=6.1",
    "detoxify>=0.5",
    # Evaluation dependencies
    "evaluate>=0.4",
    "nvidia-ml-py3>=7.352",
]

[project.optional-dependencies]
fp8 = [
    "transformer-engine[pytorch]>=1.2",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
